syntax = "proto3";

package mail.service;

// import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";
// import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/QuanDN22/Server-Management-System/proto/mail";

service mail {
	rpc SendMail(SendMailRequest) returns (google.protobuf.Empty) {}
}

message SendMailRequest {
    bytes data_send_mail = 1;
}

