syntax = "proto3";

package managment.system.service;

// import "google/api/annotations.proto";
// import "google/protobuf/empty.proto";
// import "google/protobuf/empty.proto";

option go_package = "github.com/QuanDN22/Server-Management-System/proto/managemen-system";

service ManagementSystem {
    // create server

    // view server

    // Update server

    // Delete server

    // Import server

    // Export server
}